Auto-wrap code blocks (to prevent long scrolling in container install examples)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,9 @@ body {
     text-align: center;
 }
 
-
+code {
+  white-space : pre-wrap !important;
+}
 
 strong { font-weight: 500; }
 
